k8s/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: alie.javeriana.edu.co
      http:
        paths:
          - path: /api/auth
            pathType: Exact
            backend:
              service:
                name:  auth-api
                port:
                  number: 80
          - path: /api/front
            pathType: Exact
            backend:
              service:
                name:  front-api
                port:
                  number: 5000
